--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="#contact" class="btn btn-outline">Contact Me</a>
 
             <!-- Download CV button -->
-            <a href="Karthik_CV.pdf" class="btn btn-outline" download>Download CV</a>
+            <a href="Karthik_Resume.pdf" class="btn btn-outline" download>Download CV</a>
           </div>
         </div>
 
@@ -167,3 +167,4 @@
 
 </body>
 </html>
+
